added main, dependencies and some config

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ Business
 Explore
 Marketplace
 Pricing
-This repository
+This com.maria.repository
 Search
 Sign in or Sign up
  Watch 2,152  Star 53,277  Fork 23,093 github/gitignore
@@ -65,4 +65,4 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 Contact GitHub API Training Shop Blog About
-© 2017 GitHub, Inc. Terms Privacy Security Status Help
+ï¿½ 2017 GitHub, Inc. Terms Privacy Security Status Help
