some changed + gitignore update

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,3 +30,7 @@ images:
     logo:
       rootPath: /contests/logos
       url: /contests/logos
+
+#experience parameters
+experience:
+  growingRatio: 5 # $growingRation * nr_of_won_contets = experience
